--- a/app/src/main/res/layout/activity_episode_anime.xml
+++ b/app/src/main/res/layout/activity_episode_anime.xml
@@ -11,19 +11,31 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="350dp">
 
         <ImageView
             android:id="@+id/ivFoto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="600dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/dashboard"
+            android:src="@mipmap/uzaki"
+            android:scaleType="centerCrop"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/filter"
             android:scaleType="fitXY"/>
 
         <ImageView
@@ -32,27 +44,29 @@
             android:layout_height="25dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_margin="20dp"
+            android:layout_margin="15dp"
             android:src="@drawable/ic_backarrow"
             android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/tvJudul"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Judul Anime"
+            android:text="Judul anime"
             android:textColor="@android:color/white"
             android:textStyle="bold"
-            android:textSize="25sp"
+            android:textSize="20dp"
             android:layout_above="@+id/tvSinopsis"/>
 
         <TextView
             android:id="@+id/tvSinopsis"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:textSize="15sp"
-            android:layout_marginHorizontal="20dp"
+            android:textSize="12dp"
+            android:layout_marginHorizontal="15dp"
+            android:maxLines="3"
+            android:ellipsize="end"
             android:textColor="@android:color/white"
             android:layout_above="@+id/tvInfo"
             android:text="Sinopsis"/>
@@ -61,8 +75,9 @@
             android:id="@+id/tvInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:layout_marginHorizontal="20dp"
+            android:textSize="13dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/pink"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
@@ -73,26 +88,24 @@
 
 
     <LinearLayout
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
             android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Episode"
-            android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:textSize="20dp"/>
+            android:textSize="18dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginBottom="10dp"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/rvListEpisode"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
