--- a/app/src/main/res/layout/anime_view.xml
+++ b/app/src/main/res/layout/anime_view.xml
@@ -10,8 +10,9 @@
         android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/cvAnime"
         android:layout_width="100dp"
-        android:layout_marginHorizontal="5dp"
-        android:layout_height="150dp"
+        android:layout_marginRight="5dp"
+        android:layout_height="175dp"
+        app:cardCornerRadius="5dp"
         android:focusable="true">
 
         <LinearLayout
@@ -23,12 +24,12 @@
             <ImageView
                 android:id="@+id/ivFoto"
                 android:layout_width="match_parent"
-                android:layout_height="110dp"
-                android:scaleType="fitXY"
-                android:src="@mipmap/dashboard"/>
+                android:layout_height="130dp"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/uzaki"/>
 
             <RelativeLayout
-                android:layout_marginHorizontal="3dp"
+                android:layout_margin="3dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -38,8 +39,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="25dp"
                     android:text="Judul"
-                    android:textSize="10dp"
-                    android:textStyle="bold"
+                    android:maxLines="2"
+                    android:ellipsize="end"
+                    android:textSize="9dp"
+                    android:textStyle=""
                     android:textColor="@android:color/white"/>
 
                 <TextView
