--- a/app/src/main/res/layout/episode_view.xml
+++ b/app/src/main/res/layout/episode_view.xml
@@ -24,7 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:padding="10dp"
+                android:padding="8dp"
+                android:textSize="14dp"
                 android:text="Episode ke -"/>
 
         </LinearLayout>
