--- a/app/src/main/res/layout/activity_main_fragment.xml
+++ b/app/src/main/res/layout/activity_main_fragment.xml
@@ -18,10 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_navigation"
+        android:layout_marginBottom="0dp"
         android:background="@color/search"
         app:itemIconTint="@color/abu"
-        app:itemTextColor="@color/abu"/>
+        app:itemTextColor="@color/abu"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_navigation" />
 
 </RelativeLayout>
