--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="back">#1d2947</color>
     <color name="search">#232323</color>
     <color name="backview">#121c34</color>
+    <color name="yellow">#ffe05d</color>
 </resources>
