--- a/app/src/main/res/layout/activity_episode_anime.xml
+++ b/app/src/main/res/layout/activity_episode_anime.xml
@@ -113,6 +113,7 @@
             android:textSize="18dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginBottom="20dp"
             android:layout_marginHorizontal="20dp"
             android:id="@+id/rvListEpisode"
             android:layout_width="match_parent"
