--- a/app/src/main/res/layout/activity_search_anime.xml
+++ b/app/src/main/res/layout/activity_search_anime.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    tools:context=".SearchAnime">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/search"
-        app:titleTextColor="@color/pink"/>
+        app:titleTextColor="@android:color/white"
+        app:subtitleTextColor="@android:color/white"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginBottom="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:id="@+id/rvListSearch"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/genre_view"
-        android:id="@+id/rvGenre"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
