--- a/app/src/main/res/layout/genre_view.xml
+++ b/app/src/main/res/layout/genre_view.xml
@@ -6,14 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvGenre"
         android:layout_width="200dp"
         android:layout_height="130dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:focusable="true"
         android:layout_marginHorizontal="3dp"
         android:layout_marginVertical="3dp"
-        app:cardCornerRadius="5dp"
-        >
+        app:cardCornerRadius="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -33,13 +33,13 @@
                 android:src="@mipmap/filter_genre"/>
 
             <TextView
+                android:id="@+id/tvGenre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Comedy"
                 android:layout_centerInParent="true"
                 android:textSize="18dp"
-                android:textColor="#fff"
-                />
+                android:textColor="#fff" />
 
         </RelativeLayout>
 
