--- a/app/src/main/res/layout/activity_search_anime.xml
+++ b/app/src/main/res/layout/activity_search_anime.xml
@@ -12,7 +12,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/search"
+        android:background="@color/colorPrimaryDark"
+        android:theme="@style/AppSearchView"
         app:titleTextColor="@android:color/white"
         app:subtitleTextColor="@android:color/white"/>
 
