--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -11,10 +11,11 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/search"
+        android:background="@color/colorPrimaryDark"
         app:titleTextColor="@color/pink"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/genre_view"
