--- a/app/src/main/res/layout/activity_episode_anime.xml
+++ b/app/src/main/res/layout/activity_episode_anime.xml
@@ -62,12 +62,13 @@
         <ImageButton
             android:id="@+id/ibBookmark"
             android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_above="@id/tvSinopsis"
+            android:layout_height="42dp"
+            android:layout_margin="10dp"
             android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
             android:backgroundTint="#00FFFFFF"
-            android:src="@drawable/ic_bookmark"
+            android:src="@mipmap/bookmark"
             />
 
         <TextView
@@ -113,8 +114,8 @@
             android:textSize="18dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginBottom="20dp"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="5dp"
             android:id="@+id/rvListEpisode"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
