--- a/app/src/main/res/layout/activity_main_fragment.xml
+++ b/app/src/main/res/layout/activity_main_fragment.xml
@@ -16,10 +16,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp"
-        android:background="@color/back"
+        app:itemIconSize="26dp"
+        app:itemTextAppearanceActive="@style/BottomNavigationView"
+        app:itemTextAppearanceInactive="@style/BottomNavigationView.Active"
+        android:background="#141E32"
         app:itemIconTint="@color/color_selector"
         app:itemTextColor="@color/color_selector"
         app:labelVisibilityMode="labeled"
