--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -125,11 +125,12 @@
     <LinearLayout
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
             android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Episode"
@@ -138,11 +139,10 @@
             android:textSize="20dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginBottom="10dp"
             android:layout_marginHorizontal="25dp"
             android:id="@+id/rvListEpisode"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
