--- a/app/src/main/res/layout/anime_view.xml
+++ b/app/src/main/res/layout/anime_view.xml
@@ -37,12 +37,12 @@
                     android:layout_alignParentTop="true"
                     android:id="@+id/tvJudul"
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:text="Judul"
+                    android:layout_height="wrap_content"
+                    android:text="Uzaki Chan wa Asobitai!!!"
                     android:maxLines="2"
                     android:ellipsize="end"
-                    android:textSize="10dp"
-                    android:textStyle="bold"
+                    android:textSize="11dp"
+                    android:fontFamily="sans-serif-medium"
                     android:textColor="@android:color/white"/>
 
                 <TextView
