--- a/app/src/main/res/layout/genre_view.xml
+++ b/app/src/main/res/layout/genre_view.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="6dp"
+    android:paddingHorizontal="3dp"
+    android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvGenre"
-        android:layout_width="200dp"
-        android:layout_height="130dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
         android:focusable="true"
-        android:layout_marginHorizontal="3dp"
-        android:layout_marginVertical="3dp"
+        android:paddingVertical="100dp"
         app:cardCornerRadius="5dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
             android:orientation="vertical">
 
             <ImageView
@@ -38,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text="Comedy"
                 android:layout_centerInParent="true"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:textColor="#fff" />
 
         </RelativeLayout>
