--- a/app/src/main/res/menu/dashboard_menu.xml
+++ b/app/src/main/res/menu/dashboard_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/mSearch"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_baseline_search_24"
         app:showAsAction="always|collapseActionView"
         android:title="Search">
     </item>
