--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,27 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppSearchView" parent="Widget.AppCompat.SearchView" >
+        <!-- Text Size -->
+        <item name="android:textSize">18dp</item>
+        <!-- Query Text Color -->
+        <item name="android:textColorPrimary">#fff</item>
+        <!-- Hint Color -->
+        <item name="android:textColorHint">#fff</item>
+        <!-- Icon Color -->
+        <item name="android:tint">#fff</item>
+    </style>
+
+    <style name= "Popins" parent= "android:Widget.TextView" >
+        <item name= "android:fontFamily" > sans-serif </item>
+    </style>
+
+    <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">9sp</item>
+    </style>
+
+    <style name="BottomNavigationView.Active" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">10sp</item>
+    </style>
+
 </resources>
