--- a/app/src/main/res/layout/ongoing_view.xml
+++ b/app/src/main/res/layout/ongoing_view.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimaryDark">
 
     <androidx.cardview.widget.CardView
         android:clickable="true"
@@ -12,6 +13,7 @@
         android:layout_marginTop="5dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
+        android:background="@color/colorPrimaryDark"
         android:focusable="true">
 
         <LinearLayout
@@ -25,7 +27,7 @@
                 android:layout_width="100dp"
                 android:layout_height="125dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/dashboard"/>
+                android:src="@mipmap/uzaki"/>
 
             <RelativeLayout
                 android:padding="10dp"
@@ -38,8 +40,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Judul"
-                    android:textSize="14dp"
-                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:fontFamily="sans-serif-medium"
                     android:textColor="@android:color/white"/>
 
                 <TextView
