--- a/app/src/main/res/layout/bookmark_view.xml
+++ b/app/src/main/res/layout/bookmark_view.xml
@@ -5,15 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:visibility="visible"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/cvAnime"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        app:cardCornerRadius="5dp"
+        android:layout_height="260dp"
+        app:cardCornerRadius="3dp"
         android:focusable="true"
         android:layout_marginEnd="10dp">
 
@@ -43,7 +43,7 @@
                     android:text="Uzaki Chan wa Asobitai!!!"
                     android:maxLines="2"
                     android:ellipsize="end"
-                    android:textSize="11dp"
+                    android:textSize="13dp"
                     android:fontFamily="sans-serif-medium"
                     android:textColor="@android:color/white"/>
 
