--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -9,10 +9,34 @@
     tools:context=".VideoPlayer"
     android:orientation="vertical">
 
-    <VideoView
-        android:id="@+id/videoView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/player_view"
+            app:resize_mode="fit"
+            app:hide_on_touch="true"
+            app:show_timeout="5000"
+            app:rewind_increment="10000"
+            app:fastforward_increment="10000"
+            app:use_controller="true"
+            android:background="@android:color/background_dark"
+            app:player_layout_id="@layout/exo_simple_player_view"
+            app:controller_layout_id="@layout/custom_controller"/>
+
+        <ProgressBar
+            android:theme="@style/AppVideoView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/progress_bar"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@id/player_view"
+            android:layout_below="@id/player_view" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_marginHorizontal="20dp"
