--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,13 @@
         <item name="android:tint">#fff</item>
     </style>
 
+    <style name="AppVideoView" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">#fff</item>
+    </style>
+
     <style name= "Popins" parent= "android:Widget.TextView" >
         <item name= "android:fontFamily" > sans-serif </item>
     </style>
